@@ -3,10 +3,15 @@
 # Functions to read data and mapping files.
 
 
+source("R/global.R")
+
+library(readr)
+
+
 # Functions for loading raw data files ------------------------------------
 
 get_readings <- function() {
-  readr::read_csv( READINGS_FILE, col_names = TRUE,
+  read_csv( READINGS_FILE, col_names = TRUE,
                    col_types = cols(
                      Day = col_integer(),
                      Shift = col_character(),
@@ -23,51 +28,55 @@ get_readings <- function() {
 
 # The record of plates lost during testing
 get_lost_map <- function() {
-  readr::read_csv( LOST_PLATES_FILE, col_names = TRUE,
-                   col_types = col( Day = col_integer(),
-                                    Shift = col_character(),
-                                    Run = col_integer(),
-                                    Class = col_character(),
-                                    ID = col_integer() )
+  read_csv( LOST_PLATES_FILE, col_names = TRUE,
+                   col_types = cols( 
+                     Day = col_integer(),
+                     Shift = col_character(),
+                     Run = col_integer(),
+                     Class = col_character(),
+                     ID = col_integer() )
                    )
 }
 
 
 # The record of plates lost during manufacture
 get_discarded_map <- function() {
-  readr::read_csv( DISCARDED_PLATES_FILE, col_names = TRUE,
-                   col_types = col( MfgPlate = col_integer() )
+  read_csv( DISCARDED_PLATES_FILE, col_names = TRUE,
+                   col_types = cols( MfgPlate = col_integer() )
                   )
 }
 
 
 get_runs_map <- function() {
-  readr::read_csv( RUNS_MAP_FILE, col_names = TRUE,
-                   col_types = col( Day = col_integer(),
-                                    Shift = col_character(),
-                                    Run = col_integer(),
-                                    ID = col_integer(),
-                                    Class = col_character() )
+  read_csv( RUNS_MAP_FILE, col_names = TRUE,
+                   col_types = cols( 
+                     Day = col_integer(),
+                     Shift = col_character(),
+                     Run = col_integer(),
+                     ID = col_integer(),
+                     Class = col_character() )
                   )
 }
 
 
 # Load a *single* mfg map file
 load_mfg_map <- function(filename) {
-  readr::read_csv( filename, col_names = TRUE,
-                   col_types = col( Run = col_integer(),
-                                    MfgPlate = col_integer() )
+  read_csv( filename, col_names = TRUE,
+                   col_types = cols( 
+                     Run = col_integer(),
+                     MfgPlate = col_integer() )
                    )
 }
 
 
 get_msa_map <- function() {
-  readr::read_csv( MSA_MAP_FILE, col_names = TRUE,
-                   col_types = col( MSAPlate = col_integer(),
-                                    AssayStrip = col_integer(),
-                                    MfgPlate = col_integer(),
-                                    Pool = col_character(),
-                                    MfgStrip = col_integer() )
+  read_csv( MSA_MAP_FILE, col_names = TRUE,
+                   col_types = cols( 
+                     MSAPlate = col_integer(),
+                     AssayStrip = col_integer(),
+                     MfgPlate = col_integer(),
+                     Pool = col_character(),
+                     MfgStrip = col_integer() )
                    )
 }
 
@@ -88,6 +97,8 @@ get_mfg_table <- function() {
   return(mfg_table)
 }
 
+
+## Eventually get rid of these two...
 
 get_mfg_summary <- function() {
   summary_tab <- 
