@@ -47,27 +47,30 @@ LOST_PLATES_FILE <- file.path( MAPS_DIR, "LostPlates.csv")
 # The record of plates discarded during the manufacturing run
 DISCARDED_PLATES_FILE <- file.path( MAPS_DIR, "DiscardedPlates.csv")
 
-# The record of the runs (day, shift, run-in-shift, plate ID)
-RUNS_MAP_FILE <- file.path( MAPS_DIR, "RunsMap.csv" )
-
 # The "Runs randomization" directory
 RUNS_RAND_DIR <- file.path( MAPS_DIR, "Runs Randomization")
 
 
 # ----- Generated data and mapping files -----
 
+# The record of the runs (day, shift, run-in-shift, plate ID)
+RUNS_MAP_FILE <- file.path( GENERATED_DIR, "RunsMap.csv" )
+
+# The runs order map
+RUNS_ORDERING_FILE <- file.path(GENERATED_DIR, "ShiftOrdering.csv")
+
 # The file of merged maps and OD readings for the "Manufacturing"
 # (non-MSA) plates
-MFG_MASTER_FILE <- file.path(DATA_TABLES_DIR, "MfgMastertable.csv")
+MFG_MASTER_FILE <- file.path(GENERATED_DIR, "MfgMastertable.csv")
 
 # A file of summary data for the MfgMastertable
-MFG_SUMMARY_FILE <- file.path(DATA_TABLES_DIR, "MfgSummary.csv")
+MFG_SUMMARY_FILE <- file.path(GENERATED_DIR, "MfgSummary.csv")
 
 # The mapping data for the embedded MSA
 MSA_MAP_FILE <- file.path(MAPS_DIR, "MSAMap.csv") 
 
 # The table of mapped MSA data
-MSA_MASTER_FILE <- file.path(DATA_TABLES_DIR, "MSAMastertable.csv") 
+MSA_MASTER_FILE <- file.path(GENERATED_DIR, "MSAMastertable.csv") 
 
 # The master SQLite database
 DATABASE <- file.path( GENERATED_DIR, "alldata.sqlite")
